
method for .zoo plots?

handling custom # of bins/custom densityplot params?

problems with plotting color labels in lattice when col= is specified,
see etc/individual.R

see etc/xYplot.R for a problem with plotting some weird trellis
objects.

contourplot labels as in lattice::panel.contourplot or C source code
in r-source/src/main/plot3d.c

2.5 ---

bugfixes for scatterplots using perpendicular.grid and [ac]hull.grid.

new check.for.columns function to make sure the data.frames returned
by Positioning Functions in apply.method have the necessary info.

bugfix for apply.method restore invariant columns for each group after
applying Positioning Method algorithm.

2.4 --- 5 March 2012

Suggest nlme to avoid warning on pkg check.

require(proto) in geom_dl to avoid error if it is called without
direct.label.ggplot

2.3 --- 2 March 2012

In apply.method, we look at all groups and determine which columns are
invariant in each, then after the Positioning Function is applied, we
write these values to the resulting data.frame if it does not contain
these variables. That way each individual Positioning Method doesn't
have to worry about keeping track of all the weird annotation columns
that can be there on input.

Works with ggplot2 0.9.0, including new simplified hiding of the
legend, using guides(colour="none")

dlgrobs have names == GRID.dlgrob.method if method is a character
string.

Tiebreaking for qp.labels when we are doing lineplots.

2.2 bugfixes

ggplot2 autopicker simpler.

use aes_string instead of aes in direct.label.ggplot

2.1 31 August 2011 -- bugfixes

gapply can take positional arguments like gapply(d,subset,y==max(y))

melt is no longer used in top.bumptwice

2.0 29 August 2011

dl.move and static.labels allow specification of label positions in
terms of the displayed axes! Internally, they convert the
user-specified numbers to cm.

Figured out how to calculate label bounding boxes for ggplot2, by
returning dlgrobs from the draw() method of the new